--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,116 @@
-html,body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  background-color: #282c34;
-  color: white;
+:root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  width: 100%;
 }
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
 
-.main-layout {
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
   display: flex;
-  flex-direction: row;
+  /* place-items: center; */
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-nav {
-  background-color: #363a45;
-  height: 100vh;
-  margin-right: 15px;
-  overflow-y: scroll;
-  text-align: center;
-  width: 250px;
-}
-nav ul {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 0;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-nav li {
-  list-style: none;
-  margin-bottom: 10px;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 
-nav li a {
-  color: white;
-  font-size: 1.2rem;
-  text-decoration: none;
+button:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+
+  a:hover {
+    color: #747bff;
+  }
+
+  button {
+    background-color: #f9f9f9;
+  }
 }
 
 .nav-active {
   color: grey;
   transition: all .3s ease-out;
+}
+
+.main-layout {
+  position: relative;
+  display: grid;
+  grid-template-columns: 300px auto;
+  grid-template-areas: "nav pages";
+}
+
+.nav {
+  align-items: center;
+  background-color: #213547;
+  display: flex;
+  flex-direction: column;
+  grid-area: nav;
+  min-height: 100vh;
+  padding: 1rem;
+}
+
+.nav .logo {
+  padding: 1rem;
+  width: 150px;
+}
+
+.nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.pages {
+  grid-area: pages;
+  padding: 1rem;
 }
